{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 175,
  "lineage": "4dcdb46b-a3e0-7d39-3806-43710c3b2e41",
  "resources": [
    {
      "module": "module.application.module.appgw_v2",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "app_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [
              {
                "max_capacity": 2,
                "min_capacity": 1
              }
            ],
            "backend_address_pool": [
              {
                "fqdns": [
                  "10.0.0.4"
                ],
                "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/backendAddressPools/appl-w-frc-demo-backendpool",
                "ip_addresses": [],
                "name": "appl-w-frc-demo-backendpool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "ApplicationGatewayAffinity",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/backendHttpSettingsCollection/appl-w-frc-demo-backhttpsettings",
                "name": "appl-w-frc-demo-backhttpsettings",
                "path": "/",
                "pick_host_name_from_backend_address": true,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 300,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": true,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/frontendIPConfigurations/appl-w-frc-demo-frontipconfig",
                "name": "appl-w-frc-demo-frontipconfig",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/publicIPAddresses/pip-appl-w-frc-demo",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/frontendPorts/frontend-https-port",
                "name": "frontend-https-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/gatewayIPConfigurations/gwipconfig-appl-w-frc-demo",
                "name": "gwipconfig-appl-w-frc-demo",
                "subnet_id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/virtualNetworks/vnet-appl-w-frc-demo/subnets/snet-appl-w-frc-demo"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/frontendIPConfigurations/appl-w-frc-demo-frontipconfig",
                "frontend_ip_configuration_name": "appl-w-frc-demo-frontipconfig",
                "frontend_port_id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/frontendPorts/frontend-https-port",
                "frontend_port_name": "frontend-https-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/httpListeners/appl-w-frc-demo-listener-https",
                "name": "appl-w-frc-demo-listener-https",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo",
            "identity": [],
            "location": "francecentral",
            "name": "agw-appl-w-frc-demo",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/backendAddressPools/appl-w-frc-demo-backendpool",
                "backend_address_pool_name": "appl-w-frc-demo-backendpool",
                "backend_http_settings_id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/backendHttpSettingsCollection/appl-w-frc-demo-backhttpsettings",
                "backend_http_settings_name": "appl-w-frc-demo-backhttpsettings",
                "http_listener_id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/httpListeners/appl-w-frc-demo-listener-https",
                "http_listener_name": "appl-w-frc-demo-listener-https",
                "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/requestRoutingRules/appl-w-frc-demo-routing-https",
                "name": "appl-w-frc-demo-routing-https",
                "priority": 1,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "rg-cp-w-demo",
            "rewrite_rule_set": [
              {
                "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/rewriteRuleSets/appl-w-frc-demo-example-rewrite-rule-set",
                "name": "appl-w-frc-demo-example-rewrite-rule-set",
                "rewrite_rule": [
                  {
                    "condition": [
                      {
                        "ignore_case": true,
                        "negate": false,
                        "pattern": "text/html(.*)",
                        "variable": "http_resp_Content-Type"
                      }
                    ],
                    "name": "appl-w-frc-demo-example-rewrite-rule-response-header",
                    "request_header_configuration": [],
                    "response_header_configuration": [
                      {
                        "header_name": "X-Frame-Options",
                        "header_value": "DENY"
                      }
                    ],
                    "rule_sequence": 100,
                    "url": []
                  },
                  {
                    "condition": [
                      {
                        "ignore_case": false,
                        "negate": false,
                        "pattern": ".*-R[0-9]{10,10}\\.html",
                        "variable": "var_uri_path"
                      },
                      {
                        "ignore_case": true,
                        "negate": false,
                        "pattern": ".*\\.fr",
                        "variable": "var_host"
                      }
                    ],
                    "name": "appl-w-frc-demo-example-rewrite-rule-url",
                    "request_header_configuration": [],
                    "response_header_configuration": [],
                    "rule_sequence": 100,
                    "url": [
                      {
                        "components": "path_only",
                        "path": "/fr{var_uri_path}",
                        "query_string": "",
                        "reroute": false
                      }
                    ]
                  }
                ]
              }
            ],
            "sku": [
              {
                "capacity": 0,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20170401S",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {
              "env": "demo",
              "stack": "appl"
            },
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [
              {
                "default_backend_address_pool_id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/backendAddressPools/appl-w-frc-demo-backendpool",
                "default_backend_address_pool_name": "appl-w-frc-demo-backendpool",
                "default_backend_http_settings_id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/backendHttpSettingsCollection/appl-w-frc-demo-backhttpsettings",
                "default_backend_http_settings_name": "appl-w-frc-demo-backhttpsettings",
                "default_redirect_configuration_id": "",
                "default_redirect_configuration_name": "",
                "default_rewrite_rule_set_id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/rewriteRuleSets/appl-w-frc-demo-example-rewrite-rule-set",
                "default_rewrite_rule_set_name": "appl-w-frc-demo-example-rewrite-rule-set",
                "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/urlPathMaps/appl-w-frc-demo-example-url-path-map",
                "name": "appl-w-frc-demo-example-url-path-map",
                "path_rule": [
                  {
                    "backend_address_pool_id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/backendAddressPools/appl-w-frc-demo-backendpool",
                    "backend_address_pool_name": "appl-w-frc-demo-backendpool",
                    "backend_http_settings_id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/backendHttpSettingsCollection/appl-w-frc-demo-backhttpsettings",
                    "backend_http_settings_name": "appl-w-frc-demo-backhttpsettings",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/urlPathMaps/appl-w-frc-demo-example-url-path-map/pathRules/appl-w-frc-demo-example-url-path-rule",
                    "name": "appl-w-frc-demo-example-url-path-rule",
                    "paths": [
                      "/demo/"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/applicationGateways/agw-appl-w-frc-demo/rewriteRuleSets/appl-w-frc-demo-example-rewrite-rule-set",
                    "rewrite_rule_set_name": "appl-w-frc-demo-example-rewrite-rule-set"
                  }
                ]
              }
            ],
            "waf_configuration": [
              {
                "disabled_rule_group": [],
                "enabled": true,
                "exclusion": [],
                "file_upload_limit_mb": 100,
                "firewall_mode": "Prevention",
                "max_request_body_size_kb": 128,
                "request_body_check": true,
                "rule_set_type": "OWASP",
                "rule_set_version": "3.1"
              }
            ],
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application.azurerm_container_group.container",
            "module.application.module.appgw_v2.azurerm_public_ip.ip",
            "module.application.module.appgw_v2.data.azurecaf_name.appgw",
            "module.application.module.appgw_v2.data.azurecaf_name.frontipconfig",
            "module.application.module.appgw_v2.data.azurecaf_name.frontipconfig_priv",
            "module.application.module.appgw_v2.data.azurecaf_name.gwipconfig",
            "module.application.module.appgw_v2.module.azure_network_subnet.azurerm_subnet.subnet",
            "module.rg.azurerm_resource_group.main_rg"
          ]
        }
      ]
    },
    {
      "module": "module.application.module.appgw_v2",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "pip-appl-w-frc-demo",
            "fqdn": "pip-appl-w-frc-demo.francecentral.cloudapp.azure.com",
            "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/publicIPAddresses/pip-appl-w-frc-demo",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.138.200.116",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "pip-appl-w-frc-demo",
            "resource_group_name": "rg-cp-w-demo",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "env": "demo",
              "stack": "appl"
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "dependencies": [
            "module.application.module.appgw_v2.data.azurecaf_name.pip_appgw",
            "module.rg.azurerm_resource_group.main_rg",
            "module.rg.data.azurecaf_name.rg"
          ]
        }
      ]
    },
    {
      "module": "module.application.module.appgw_v2.module.azure_network_subnet[\"appgw_subnet\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/virtualNetworks/vnet-appl-w-frc-demo/subnets/snet-appl-w-frc-demo",
            "name": "snet-appl-w-frc-demo",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-cp-w-demo",
            "virtual_network_name": "vnet-appl-w-frc-demo"
          },
          "dependencies": [
            "module.application.module.appgw_v2.data.azurecaf_name.subnet_appgw",
            "module.application.module.appgw_v2.module.azure_network_subnet.data.azurecaf_name.subnet",
            "module.application.module.azure_network_vnet.azurerm_virtual_network.main_vnet",
            "module.application.module.azure_network_vnet.data.azurecaf_name.vnet",
            "module.rg.azurerm_resource_group.main_rg",
            "module.rg.data.azurecaf_name.rg"
          ]
        }
      ]
    },
    {
      "module": "module.application.module.azure_network_route_table",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/routeTables/route-appl-w-frc-demo",
            "location": "francecentral",
            "name": "route-appl-w-frc-demo",
            "resource_group_name": "rg-cp-w-demo",
            "route": [],
            "subnets": [
              "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/virtualNetworks/vnet-appl-w-frc-demo/subnets/snet-appl-private-w-frc-demo"
            ],
            "tags": {
              "env": "demo",
              "stack": "appl"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application.module.azure_network_route_table.data.azurecaf_name.rt",
            "module.rg.azurerm_resource_group.main_rg",
            "module.rg.data.azurecaf_name.rg"
          ]
        }
      ]
    },
    {
      "module": "module.application.module.azure_network_security_group",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-appl-w-frc-demo",
            "location": "francecentral",
            "name": "nsg-appl-w-frc-demo",
            "resource_group_name": "rg-cp-w-demo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAnyCustomAnyInbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "deny-all-inbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "env": "demo",
              "stack": "appl"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application.module.azure_network_security_group.data.azurecaf_name.nsg",
            "module.rg.azurerm_resource_group.main_rg",
            "module.rg.data.azurecaf_name.rg"
          ]
        }
      ]
    },
    {
      "module": "module.application.module.azure_network_security_group",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "appgw_health_probe_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "enabled",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "65200-65535"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-appl-w-frc-demo/securityRules/appgw-health-probe-inbound",
            "name": "appgw-health-probe-inbound",
            "network_security_group_name": "nsg-appl-w-frc-demo",
            "priority": 4005,
            "protocol": "Tcp",
            "resource_group_name": "rg-cp-w-demo",
            "source_address_prefix": "GatewayManager",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application.module.azure_network_security_group.azurerm_network_security_group.nsg",
            "module.rg.azurerm_resource_group.main_rg"
          ]
        }
      ]
    },
    {
      "module": "module.application.module.azure_network_security_group",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny_all_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "enabled",
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-appl-w-frc-demo/securityRules/deny-all-inbound",
            "name": "deny-all-inbound",
            "network_security_group_name": "nsg-appl-w-frc-demo",
            "priority": 4096,
            "protocol": "*",
            "resource_group_name": "rg-cp-w-demo",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application.module.azure_network_security_group.azurerm_network_security_group.nsg",
            "module.application.module.azure_network_security_group.data.azurecaf_name.nsg",
            "module.rg.azurerm_resource_group.main_rg",
            "module.rg.data.azurecaf_name.rg"
          ]
        }
      ]
    },
    {
      "module": "module.application.module.azure_network_security_group",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "lb_health_probe_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "enabled",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-appl-w-frc-demo/securityRules/lb-health-probe-inbound",
            "name": "lb-health-probe-inbound",
            "network_security_group_name": "nsg-appl-w-frc-demo",
            "priority": 4006,
            "protocol": "Tcp",
            "resource_group_name": "rg-cp-w-demo",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application.module.azure_network_security_group.azurerm_network_security_group.nsg",
            "module.rg.azurerm_resource_group.main_rg"
          ]
        }
      ]
    },
    {
      "module": "module.application.module.azure_network_subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "delegation": [
              {
                "name": "app-service-plan",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.ContainerInstance/containerGroups"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/virtualNetworks/vnet-appl-w-frc-demo/subnets/snet-appl-private-w-frc-demo",
            "name": "snet-appl-private-w-frc-demo",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-cp-w-demo",
            "virtual_network_name": "vnet-appl-w-frc-demo"
          },
          "dependencies": [
            "module.application.module.azure_network_subnet.data.azurecaf_name.subnet",
            "module.application.module.azure_network_vnet.azurerm_virtual_network.main_vnet",
            "module.application.module.azure_network_vnet.data.azurecaf_name.vnet",
            "module.rg.azurerm_resource_group.main_rg",
            "module.rg.data.azurecaf_name.rg"
          ]
        }
      ]
    },
    {
      "module": "module.application.module.azure_network_subnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/virtualNetworks/vnet-appl-w-frc-demo/subnets/snet-appl-private-w-frc-demo",
            "network_security_group_id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-appl-w-frc-demo",
            "subnet_id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/virtualNetworks/vnet-appl-w-frc-demo/subnets/snet-appl-private-w-frc-demo"
          },
          "dependencies": [
            "module.application.module.azure_network_security_group.azurerm_network_security_group.nsg",
            "module.application.module.azure_network_security_group.data.azurecaf_name.nsg",
            "module.application.module.azure_network_subnet.azurerm_subnet.subnet",
            "module.application.module.azure_network_subnet.data.azurecaf_name.subnet",
            "module.application.module.azure_network_subnet.data.azurerm_subscription.current",
            "module.application.module.azure_network_vnet.azurerm_virtual_network.main_vnet",
            "module.application.module.azure_network_vnet.data.azurecaf_name.vnet",
            "module.rg.azurerm_resource_group.main_rg",
            "module.rg.data.azurecaf_name.rg"
          ]
        }
      ]
    },
    {
      "module": "module.application.module.azure_network_subnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/virtualNetworks/vnet-appl-w-frc-demo/subnets/snet-appl-private-w-frc-demo",
            "route_table_id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/routeTables/route-appl-w-frc-demo",
            "subnet_id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/virtualNetworks/vnet-appl-w-frc-demo/subnets/snet-appl-private-w-frc-demo"
          },
          "dependencies": [
            "module.application.module.azure_network_route_table.azurerm_route_table.route_table",
            "module.application.module.azure_network_route_table.data.azurecaf_name.rt",
            "module.application.module.azure_network_subnet.azurerm_subnet.subnet",
            "module.application.module.azure_network_subnet.data.azurecaf_name.subnet",
            "module.application.module.azure_network_subnet.data.azurerm_subscription.current",
            "module.application.module.azure_network_vnet.azurerm_virtual_network.main_vnet",
            "module.application.module.azure_network_vnet.data.azurecaf_name.vnet",
            "module.rg.azurerm_resource_group.main_rg",
            "module.rg.data.azurecaf_name.rg"
          ]
        }
      ]
    },
    {
      "module": "module.application.module.azure_network_vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "fe58d31a-c17c-4c4b-b063-023f4c4fdcf9",
            "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/virtualNetworks/vnet-appl-w-frc-demo",
            "location": "francecentral",
            "name": "vnet-appl-w-frc-demo",
            "resource_group_name": "rg-cp-w-demo",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/virtualNetworks/vnet-appl-w-frc-demo/subnets/snet-appl-private-w-frc-demo",
                "name": "snet-appl-private-w-frc-demo",
                "security_group": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-appl-w-frc-demo"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/5f3a474b-cfbc-4d9a-a0d5-2eb4619973d2/resourceGroups/rg-cp-w-demo/providers/Microsoft.Network/virtualNetworks/vnet-appl-w-frc-demo/subnets/snet-appl-w-frc-demo",
                "name": "snet-appl-w-frc-demo"
              }
            ],
            "tags": {
              "env": "demo",
              "stack": "appl"
            }
          },
          "dependencies": [
            "module.application.module.azure_network_vnet.data.azurecaf_name.vnet",
            "module.rg.azurerm_resource_group.main_rg",
            "module.rg.data.azurecaf_name.rg"
          ]
        }
      ]
    }
  ]
}